.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Location__c/Shiftmatch_Location__c.object-meta.xml
<CustomObject>
    <label>Shiftmatch Location</label>
    <nameField>
        <label>Shiftmatch Location PKID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shiftmatch Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>