.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Location__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <label>Abbreviation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>