.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Location__c/fields/Child_Account__c.field-meta.xml
<CustomField>
    <fullName>Child_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shiftmatch Locations (Child Account)</relationshipLabel>
    <relationshipName>Shiftmatch_Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>