.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Location__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>sirenum__Location__c</referenceTo>
    <relationshipLabel>Shiftmatch Locations</relationshipLabel>
    <relationshipName>Shiftmatch_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>