.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Location__c/fields/Parent_Location__c.field-meta.xml
<CustomField>
    <fullName>Parent_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Location</label>
    <referenceTo>Shiftmatch_Location__c</referenceTo>
    <relationshipLabel>Shiftmatch Locations</relationshipLabel>
    <relationshipName>Shiftmatch_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>