.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Location__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>sirenum__Site__c</referenceTo>
    <relationshipLabel>Shiftmatch Locations</relationshipLabel>
    <relationshipName>Shiftmatch_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>