.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Level__c</columns>
    <columns>Description__c</columns>
    <columns>Child_Account__c</columns>
    <columns>Site__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>